app/assets/stylesheets/style_guide.css.scss
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

$headline-font: 'Hind', sans-serif;
$maintext-font: 'Merriweather', serif;
$cursive-font: 'Dancing Script', cursive;


//light green
$top-bg-color: #b6ded4;

//deeper green in case we need it
$alt-top-bg-color: #65a397;

//faded red color
$button-bg-color: #d95353;

//light gray color
$text-button-color: #e8e3e6;
$header-texts-color: #e8e3e6;

//dark gray color
$logo-color: #bab4b3;

//navy color
$dark-header-color: #2e2e40;

//text-shadow for <h1>
$alt-gray-color: #a6a6b0;


/************************************
              NAV BAR
************************************/
.nav-login-bar, .nav-logout-bar {
  background-color: $dark-header-color;
  height: 6em;
  margin-bottom: 4em;
  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
/**************************************
OPTION FOR FIXED POSITION
*************************************/
/*  position: fixed;
  z-index:1;
  top: -5px;
  width: 100%;
*/
}

.nav-logo {
  display: inline;
  float: left;
  font-size: 3em;
  font-family: $cursive-font;
  padding: .5em 0 0 1.7em;
}

.logo {
  display: inline;
}

.logo a {
  text-decoration: none;
  color: #fff;
}

.logo a:hover {
  color: $top-bg-color;
  transition: .4s;
}

.nav-list {
  display: inline;
  float: right;
  padding: 3.3em 5em 0 0;
}

.nav-about, .nav-signup, .nav-login, .nav-myProfile, .nav-logout {
  display: inline;
  font-family: $headline-font;
  font-size: 1em;
  padding-right: 3em;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: .01em;
}

.nav-list a {
  text-decoration: none;
  color: #fff;
}

.nav-list ul li a:hover {
  border-bottom: 2px solid $top-bg-color;
  color: $top-bg-color;
  border-color: $top-bg-color;
  transition: .3s;
}

/************************************
         NAV MEDIA QUERY
************************************/
/*
@media screen and (max-width: 750px) {
  .nav-login-bar, .nav-logout-bar {
  padding-bottom: 2em;
  width: 100%;
  margin: 0 auto 0;
  background: #fff;
}
}

.logo {
  display: block;
  text-align: center;
  float: none;
  color: black;
}

.nav-list {
  display: block;
  margin: 0 auto;
  float: none;
}

.nav-list ul {
list-style: none;
  text-align: center;
  padding: 0;
  margin: .7em 0 0 0;
  background: #d95353;
}

.nav-list li {
  display: block;
  border-bottom: 1px solid #fff;
  padding: .5em;
}

.nav-login-bar a, .nav-logout-bar a {
  display: block;
  padding: .75em .5em;
  text-decoration: none;
  font-family: Arial;
  font-size: 1em;
  color: #fff;
  background: none;
}

.nav-login-bar li:hover, .nav-logout-bar li:hover {
  background: #2e2e40;
  transition: .4s;
}

.nav-login-bar a:hover, .nav-logout-bar a:hover,  {
  background: none;
  transition: none;
}
*/

/************************************
         HERO HOMEPAGE
************************************/
.main-container-hero {
  background-color: $top-bg-color;
  color: white;
  margin-left: 0px;
  height: 535px;
  margin-top: 2.5em;
  margin-bottom: -1em;
}

h1 {
  font-family: $headline-font;
  font-size: 5.3em;
  text-align: center;
  text-shadow: -1px -1px $alt-gray-color;
  line-height: 1.4em;
  margin-bottom: -2.7em;
  padding-top: 1.7em;
}

.key-words {
  font-family: $headline-font, sans-serif;
  text-align: center;
  font-size: 45px;
  margin-top: 1.1em;
  margin-bottom: -1.7em;
}

.third-line {
  font-family: $cursive-font, cursive;
  text-align: center;
  font-size: 45px;
  margin-top: 0.5em;
  text-shadow: -1px -1px $alt-gray-color;
  margin-bottom: -1.7em;
}

/************************************
    CENTERED SEARCH BOX
************************************/
.search-box-wrapper {
  display: block;
  text-align: center;
  margin: 4em 0 4em;
}

.inline-search-form {
    margin: 0 auto;
}

#inline-search-field {
  display: inline-block;
  font-size: 1em;
  font-family: $headline-font;
  width: 15em;
  padding: .35em .4em .4em;
  border-top-left-radius: .25em;
  border-bottom-left-radius: .25em;
  border-inset: none;
  border: 1px solid #ccc;
  color: black;
}

.inline-search-button {
  display: inline-block;
  font-size: .8em;
  font-weight: bolder;
  font-family: $headline-font;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $alt-top-bg-color;
  color: #fff;
  border-top-right-radius: .25em;
  border-bottom-right-radius: .25em;
  padding: .75em 1em .75em;
  position: relative;
  left: -5px;
}

.inline-search-button:hover {
  background: #6fbaab;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
  CENTERED SEARCH BOX
         MEDIA QUERY
************************************/
@media screen and (max-width: 550px) {
  #inline-search-field {
    display: block;
    margin: 0 auto 0;
    text-align: center;
    border-radius: .25em;
    margin-bottom: .25em;
}

.inline-search-button {
  display: block;
  margin: 0 auto 0;
  text-align: center;
  border-radius: .25em;
  left: 0;
  width: 18.8em;
}
}

/****************************************
HOMEPAGE LESSON PREVIEWS
****************************************/
.lesson-preview-link {
  text-decoration: none;
}

.lesson-preview-container {
  margin: 3em auto 3em;
  width: 45%;
  border: 1px solid #ddd;
  background: #f7f7f7;
  border-radius: 1px;
}

.lesson-preview-title-container {
  margin-bottom: 1em;
  background: #ddd;
  box-shadow: 0 2px 5px rgba(0,0,0,0.18);
  padding: .5em .5em .5em .7em;

}

.lesson-preview-title {
  font-size: 1.75em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
}

.lesson-preview-subject-container {
  padding: .5em .5em .5em 1em;
}

.lesson-preview-subject {
  font-size: 1.5em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
  margin: .3em .3em .5em 2em;
}

.lesson-preview-subject-list {
  margin-right: .75em;
}

.lesson-preview-grade-list {
  padding-left: .75em;
}

.lesson-preview-subject-list, .lesson-preview-pipe, .lesson-preview-grade-list,  {
  display: inline;
  font-size: 1em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
}

.lesson-preview-ranking, .lesson-preview-description {
  font-size: .9em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
}

.lesson-preview-ranking {
  padding: 0 0 .5em .75em;
}

.lesson-preview-description {
  padding: 0 .5em .75em .75em;
  line-height: 1.3em;
}

/************************************
            SAVE BUTTON
************************************/
.save-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.save-button {
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $alt-top-bg-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em .8em 1em;
}

.save-button:hover {
  background: #6fbaab;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
            EDIT BUTTON
************************************/
.edit-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.edit-button {
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $button-bg-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em;
}

.edit-button:hover {
  background: #ff6363;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/**********************************************
SAVE & EDIT BUTTON SIDE BY SIDE
**********************************************/
.edit-save-buttons-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.edit-save-buttons-wrapper button {
  margin: 0 .5em 0;
}

/************************************
              FOOTER
************************************/
footer {
  background: #2e2e40;
  max-height: 40em;
  margin-top: 4em;
  padding: 1em;
}

.footer-head {
  text-align: center;
  font-size: 4em;
  font-family: $cursive-font;
  margin: 1em 0 1em;
  color: #fff;
  padding: 0;
  font-weight: 400;
  text-shadow: none;
}

.footer-social-icons {
  text-align: center;
  font-size: 4em;
  font-family: $cursive-font;
  margin: -1em 0 1em;
  color: #fff;
}

.footer ul {
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0 0 2em 0;
}

.footer li {
  display: inline;
}

.about-footer,
.signup-footer,
.terms-footer {
  font-family: $headline-font;
  font-size: 1em;
  padding: 0 2em 0 2em;
  letter-spacing: .05em;
}

.footer a {
  text-decoration: none;
  color: #fff;
  transition: .3s background-color;
}

.footer a:hover {
  color: $top-bg-color;
  transition: .4s;
}

.footer-ruler {
  display: block;
  margin: 2em auto 2em;
  width: 40%;
  border-bottom: 1px dashed #aaa;
}

.footer-ruler hr {
  border: 0;
  height: 0;
  border-top: 1px dashed rgba(0, 0, 0, 0.1);
  border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
  width: 50%;
}

.social-icons {
  font-size: 2em;
  color: #fff;
}

.icon-twitter-circled,
.icon-facebook-circled,
.icon-pinterest-circled {
  margin: 1em .5em .5em .5em;
}

.icon-twitter-circled:hover,
.icon-facebook-circled:hover,
.icon-pinterest-circled:hover{
  color: $top-bg-color;
  transition: .4s;
  cursor: pointer;
}

/************************************
    FOOTER MEDIA QUERY
************************************/
@media screen and (max-width: 500px) {
  .footer-subheads li {
  display: block;
  margin: .5em 0 .5em;
  }
}

